--- a/veiculos/templates/lista_veiculos.html
+++ b/veiculos/templates/lista_veiculos.html
@@ -25,7 +25,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{% url 'login_view' %}">Login</a>
-                <a class="dropdown-item" href="#">Sobre Nós</a>
+                <a class="dropdown-item" href="{% url 'sobre' %}">Sobre Nós</a>
             </div>
         </div>
     </div>
