--- a/veiculos/templates/sobre.html
+++ b/veiculos/templates/sobre.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    {% load static %}
     <title>sobre</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'css/sobre.css' %}" />
   </head>
   <body>
 
@@ -62,13 +63,6 @@
       </div>
     </section>
 
-    <div class="container">
-      
-      <div class="copyright" style="text-align: center;">
-        &copy; Copyright <strong>JL Veiculos</strong>. Todos os direitos reservados
-      </div>
-      <div class="credits" style="text-align: center;">
-        Desenvolvido por BY <a href="" >JLDEVS</a>
-      </div>
+
   </body>
 </html>
